--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 .App {
   text-align: center;
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 1.2;
+  background-color: lightblue;
+  height: 100vh;
+  max-height: 100vh;
+  max-width: 100vw;
 }
