--- a/client/src/components/TextDisplay.css
+++ b/client/src/components/TextDisplay.css
@@ -17,7 +17,7 @@
 
 .input-container {
     position: absolute;
-    top: 20vh;
+    top: 25vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,5 +38,46 @@
     padding: 10px;
     min-height: 40px;
     width: 85vw;
-    
 }
+
+/* Testing Area */
+
+.display-container {
+    position: absolute;
+    top:25vh;
+    /* width: 100vw; */
+
+    padding: 16px;
+    border: 2px solid #ccc;
+    border-radius: 12px;
+    background-color: #f9f9f9;
+    min-height: 100px;
+    word-wrap: break-word;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 1.6;
+    overflow: hidden;
+  }
+  
+  /* Correct letters (green) */
+  .display-container span.correct {
+    color: green;
+    /* font-weight: bold; */
+  }
+  
+  /* Incorrect letters (red) */
+  .display-container span.incorrect {
+    color: red;
+  }
+  
+  /* Skipped letters (underlined) */
+  .display-container span.skipped {
+    color: gray;
+    text-decoration: underline;
+  }
+  
+  /* Extra letters (red after word) */
+  .display-container span.extra {
+    color: red;
+    /* opacity: 0.8; */
+  }
+  
