--- a/client/src/components/Counter.css
+++ b/client/src/components/Counter.css
@@ -1,3 +1,19 @@
-.time-display {
-    padding-top:15px
+.counters-container {
+    display: flex;
+    /* position: absolute; */
+    /* top: 7vh; */
+    width: 100vw;
+    padding-top: 50px;
+    justify-content: center;
+
+    background-color: #333333;
+}
+
+.time-display,
+.word-counter {
+    font-family: "Roboto Mono", monospace;
+    font-size: 60px;
+
+    padding-inline: 20px;
+    color: #7c7c7c;
 }
