--- a/client/src/components/TextDisplay.css
+++ b/client/src/components/TextDisplay.css
@@ -1,11 +1,12 @@
 .display-container {
   display: flex;
-  /* position: absolute; */
-  /* top: 19vh; */
+  position: relative;
+  top: 0vh;
   width: 100vw;
   padding-top: 45px;
 
   background-color: #333333;
+  transition: all 1.25s;
 }
 
 .display-text {
@@ -18,6 +19,17 @@
   line-height: 1.4;
 
   background-color: #333333;
+  transition: all 1.25s;
+}
+
+.display-container-summary {
+  top: -17.5vh;
+}
+
+.display-text-summary {
+  font-size: 30px;
+  line-height: 1.1;
+  width: 75%;
 }
 
 /* Correct letters */
