Added support for moving cursor up, Added support for fetching an Array, Added styling for skipped letters, Now bluring buttons on Keyboard input (bug fix)

--- a/client/src/components/TextDisplay.css
+++ b/client/src/components/TextDisplay.css
@@ -48,6 +48,11 @@
 
 /* Skipped letters */
 .display-container span.skipped {
+  text-decoration: underline;
+}
+
+/* Skipped letters */
+.display-container span.next {
   color: gray;
 }
 
