Added styling for Stats.js, Updated fetch to work differently depending on the chosen settings

--- a/client/src/components/Options.css
+++ b/client/src/components/Options.css
@@ -15,6 +15,11 @@
     pointer-events: none;
 }
 
+.options-container-disabled {
+    top: 0vh;
+    pointer-events: none;
+}
+
 .options-box,
 .reset-box {
     padding: 5px 5px;
