--- a/client/src/components/Stats.css
+++ b/client/src/components/Stats.css
@@ -1,24 +1,65 @@
 .stats-container {
     display: flex;
-    position: relative;
-    left: 0vw;
-    width: 100vw;
-    top: -60px;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-
-    opacity: 100%;
+    width: 100vw;
+    position: relative;
+    top: -80px;
+    left: 0;
+    opacity: 1;
     transition: all 1s;
 }
 
 .stats-container-hidden {
-    opacity: 0%;
+    opacity: 0;
     left: -50vw;
 }
 
 .stats {
     font-family: "Roboto Mono", monospace;
-    font-size: 42px;
-
-    padding-inline: 20px;
     color: #7c7c7c;
+    font-size: 36px;
+}
+
+.stats-item {
+    margin: 8px 0;
+}
+
+.test-info {
+    font-family: "Roboto Mono", monospace;
+    font-size: 22px;
+    padding-top: 20px;
+    color: #7c7c7c;
+}
+
+.stats-value {
+    color: white;
+    margin-left: 8px;
+    position: relative;
+    cursor: pointer;
+}
+
+.tooltip {
+    visibility: hidden;
+    width: max-content;
+    background-color: #212121;
+    color: #fff;
+    text-align: center;
+    padding: 6px 10px;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 0.9rem;
+    white-space: nowrap;
+}
+
+.stats-value:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
 }
